# GtkSharp

./: .gitignore  Dockerfile  GENERATOR.md  dbuild.sh  meson.build  meson_options.txt  update_sources.py
Source/: .editorconfig  common.targets  gapi.xsd  gtk-sharp.sln  meson.build  version.props.in
Source/Addins/MonoDevelop.GtkSharp.Addin/: CheckMissing.cs  GladeDesktopApplication.cs  GladeDisplayBindings.cs
Source/Addins/MonoDevelop.GtkSharp.Addin/Properties/: AddinInfo.cs  AssemblyInfo.cs  Manifest.addin.xml
Source/atk/: Atk.metadata  Global.cs  Hyperlink.cs  Misc.cs  Object.cs  SelectionAdapter.cs  TextAdapter.cs  TextChangedDetail.cs  Util.cs  atk-api.raw  atk-sharp.dll.config.in  atk.csproj  meson.build
Source/bindinator/: LICENSE  meson.build
Source/bindinator/bindinate/: bindinate.in  gir2gapi.xslt.in  merge.xslt  preprocess.xslt
Source/bindinator/scheme/: c.xsd  gir.xsd  glib.xsd  xml.xsd
Source/cairo/: Antialias.cs  Cairo.cs  CairoDebug.cs  Color.cs  Content.cs  Context.cs  Device.cs  DirectFBSurface.cs  Distance.cs  Extend.cs  FillRule.cs  Filter.cs  FontExtents.cs  FontFace.cs  FontOptions.cs  FontSlant.cs  FontType.cs  FontWeight.cs  Format.cs  GlitzSurface.cs  Glyph.cs  Gradient.cs  HintMetrics.cs  HintStyle.cs  ImageSurface.cs  LineCap.cs  LineJoin.cs  LinearGradient.cs  Matrix.cs  NativeMethods.cs  Operator.cs  PSSurface.cs  Path.cs  Pattern.cs  PatternType.cs  PdfSurface.cs  Point.cs  PointD.cs  RadialGradient.cs  Rectangle.cs  (+17 more)
Source/doc/en/GLib/: Object.xml
Source/gdk/: Atom.cs  Color.cs  Device.cs  Display.cs  DisplayManager.cs  Event.cs  EventButton.cs  EventConfigure.cs  EventCrossing.cs  EventDND.cs  EventExpose.cs  EventFocus.cs  EventGrabBroken.cs  EventKey.cs  EventMotion.cs  EventOwnerChange.cs  EventProperty.cs  EventProximity.cs  EventScroll.cs  EventSelection.cs  EventSetting.cs  EventVisibility.cs  EventWindowState.cs  Gdk.metadata  Global.cs  Key.cs  Keymap.cs  Pixbuf.cs  PixbufAnimation.cs  PixbufFrame.cs  PixbufLoader.cs  Pixdata.cs  Point.cs  Property.cs  RGBA.cs  Rectangle.cs  Screen.cs  Selection.cs  Size.cs  TextProperty.cs  (+6 more)
Source/generator/: AliasGen.cs  ArrayParameter.cs  ArrayStringGen.cs  BoxedGen.cs  ByRefGen.cs  CallbackGen.cs  ChildProperty.cs  ClassBase.cs  ClassField.cs  ClassGen.cs  CodeGenerator.cs  ConstFilenameGen.cs  ConstStringGen.cs  Constant.cs  Ctor.cs  DefaultSignalHandler.cs  EnumGen.cs  FieldBase.cs  GObjectVM.cs  GenBase.cs  GenerationInfo.cs  HandleBase.cs  IAccessor.cs  IGeneratable.cs  IManualMarshaler.cs  IOwnable.cs  InterfaceGen.cs  InterfaceVM.cs  LPGen.cs  LPUGen.cs  LogWriter.cs  ManagedCallString.cs  ManualGen.cs  MarshalGen.cs  Method.cs  MethodABIField.cs  MethodBase.cs  MethodBody.cs  NativeStructGen.cs  ObjectBase.cs  (+29 more)
Source/gio/: AppInfoAdapter.cs  Application.cs  FileAdapter.cs  FileEnumerator.cs  FileFactory.cs  Gio.metadata  GioGlobal.cs  GioStream.cs  IFile.cs  gio-api.raw  gio-sharp.dll.config.in  gio.csproj  meson.build
Source/glib/: AbiField.cs  AbiStruct.cs  Argv.cs  Bytes.cs  Cond.cs  ConnectBeforeAttribute.cs  Date.cs  DateTime.cs  DefaultSignalHandlerAttribute.cs  DestroyNotify.cs  ExceptionManager.cs  FileUtils.cs  GException.cs  GInterfaceAdapter.cs  GInterfaceAttribute.cs  GLibSharp.SourceDummyMarshalNative.cs  GLibSharp.SourceFuncNative.cs  GLibSynchronizationContext.cs  GString.cs  GType.cs  GTypeAttribute.cs  Global.cs  HookList.cs  IOChannel.cs  IWrapper.cs  Idle.cs  InitiallyUnowned.cs  KeyFile.cs  List.cs  ListBase.cs  Log.cs  MainContext.cs  MainLoop.cs  ManagedValue.cs  Markup.cs  MarkupParser.cs  Marshaller.cs  MissingIntPtrCtorException.cs  Mutex.cs  NotifyHandler.cs  (+36 more)
Source/gtk/: Accel.cs  AccelKey.cs  Action.cs  ActionEntry.cs  ActionGroup.cs  Adjustment.cs  Application.cs  ArrayExtensions.cs  Bin.cs  BindingAttribute.cs  Builder.cs  Button.cs  Calendar.cs  CellAreaBox.cs  CellLayoutAdapter.cs  CellRenderer.cs  CellView.cs  CheckMenuItem.cs  ChildPropertyAttribute.cs  Clipboard.cs  ColorSelection.cs  ComboBox.cs  ComboBoxText.cs  Container.cs  Dialog.cs  Drag.cs  Entry.cs  EntryCompletion.cs  FileChooserDialog.cs  FileChooserNative.cs  Frame.cs  Global.cs  Gtk.metadata  HBox.cs  HScale.cs  ICellLayout.cs  ITreeModel.cs  ITreeNode.cs  IconFactory.cs  IconSet.cs  (+74 more)
Source/gtkdotnet/: Graphics.cs  gtk-dotnet.dll.config.in
Source/pango/: Analysis.cs  AttrBackground.cs  AttrColor.cs  AttrFallback.cs  AttrFamily.cs  AttrFloat.cs  AttrFontDesc.cs  AttrForeground.cs  AttrGravity.cs  AttrGravityHint.cs  AttrInt.cs  AttrIterator.cs  AttrLanguage.cs  AttrLetterSpacing.cs  AttrList.cs  AttrRise.cs  AttrScale.cs  AttrShape.cs  AttrSize.cs  AttrStretch.cs  AttrStrikethrough.cs  AttrStrikethroughColor.cs  AttrStyle.cs  AttrUnderline.cs  AttrUnderlineColor.cs  AttrVariant.cs  AttrWeight.cs  Attribute.cs  Context.cs  Coverage.cs  FontFamily.cs  FontMap.cs  Global.cs  GlyphItem.cs  GlyphString.cs  Item.cs  Layout.cs  LayoutLine.cs  LayoutRun.cs  Matrix.cs  (+9 more)
Source/parser/: meson.build
Source/sample/: sample.csproj
Source/sample/opaquetest/: opaque-api.xml  opaque-sources.xml  opaquetest.exe.config.in
Source/sample/valtest/: valobj-api.xml  valobj-sources.xml  valtest.exe.config.in
Source/sources/: sources.xml
Source/tests/: meson.build
Source/tests/generator/: Generator.Tests.csproj  IntegrationTests.cs  NativeLibraryResolver.cs  TestGenerator.csproj  meson.build
Source/tests/generator/Generator.Tests.Integration/: Atk.cs  Gdk.cs  Generator.Tests.Integration.csproj  Gio.cs  Gtk.cs  IntegrationTests.cs  Pango.cs  Regress.cs  Utils.cs
Source/tests/generator/Generator.Tests.Unit/: ArrayParameters.cs  GList.cs  GSList.cs  Generator.Tests.Unit.csproj  SetupClass.cs  StringParameters.cs  TestArray.cs  TestBasicTypes.cs  TestBoxed.cs  TestCallback.cs  TestClosure.cs  TestGArray.cs  TestGHash.cs  TestGList.cs  TestGSList.cs  TestGVariant.cs  TestMisc.cs  TestString.cs  UnitTests.cs
Source/tests/generator/regress/: Regress-1.0.gir  SearchDirs.cs.in  meson.build  misc.c  misc.h  regress-sharp-api.xml  sync_files.py
scripts/: format-csharp
subprojects/: bindinator.wrap  (+2 more)
(+11 files in other folders)
